--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "build": "qwik build",
     "build.client": "vite build",
     "build.preview": "vite build --ssr src/entry.preview.tsx",
+    "build.server": "vite build -c adapters/cloudflare-pages/vite.config.ts",
     "build.types": "tsc --incremental --noEmit",
+    "deploy": "npm run build && npm run build.server && wrangler pages deploy dist",
     "dev": "vite --mode ssr",
     "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
     "fmt": "prettier --write .",
     "lint": "eslint \"src/**/*.ts*\"",
     "preview": "qwik build preview && vite preview --open",
+    "serve": "wrangler pages dev dist",
     "start": "vite --open --mode ssr",
     "qwik": "qwik"
   },
@@ -32,7 +35,8 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.52.0",
     "vite": "^5.3.4",
-    "vite-tsconfig-paths": "^6.0.3"
+    "vite-tsconfig-paths": "^6.0.3",
+    "wrangler": "^4.57.0"
   },
   "private": true
 }
