feat: integrate Sanity CMS for blog posts
- Add @sanity/client dependency
- Create src/lib/sanity.ts with client, types, and GROQ queries
- Update blog routes to fetch posts from Sanity
- Update sitemap to dynamically fetch posts from Sanity

--- a/package.json
+++ b/package.json
@@ -45,5 +45,8 @@
     "vitest": "^4.0.16",
     "wrangler": "^4.57.0"
   },
-  "private": true
+  "private": true,
+  "dependencies": {
+    "@sanity/client": "^7.14.0"
+  }
 }
