feat: add Hindsight memory auto-sync infrastructure
- Add Fly.io deployment config for Hindsight API
- Use Railway PostgreSQL + pgvector for storage
- Use Jina AI for embeddings (free tier)
- Use Groq for LLM (free tier)
- Add sync-memory job to CI workflow (runs after deploy)
- Update .env.example with Hindsight configuration

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,8 @@
 VITE_SANITY_PROJECT_ID=76ahey7l
 VITE_SANITY_DATASET=production
 
-# Hindsight Agent Memory (optional)
-# Run: docker run -p 8888:8888 ghcr.io/vectorize-io/hindsight:latest
+# Hindsight Agent Memory
+# For local development: docker run -p 8888:8888 ghcr.io/vectorize-io/hindsight:latest
+# For production: Deploy to Fly.io (see infra/hindsight/README.md)
 HINDSIGHT_API_URL=http://localhost:8888
+# HINDSIGHT_API_URL=https://hindsight-mihai.fly.dev  # Production
