--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -8,7 +8,6 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
   build-and-push:
@@ -32,7 +31,10 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          # Publish to BOTH org and personal account
+          images: |
+            ${{ env.REGISTRY }}/${{ github.repository }}
+            ${{ env.REGISTRY }}/chindris-mihai-alexandru/mihai.codes
           tags: |
             type=ref,event=branch
             type=ref,event=pr
